bdr.BDR2.scala.error
Compilation error:
BDR2:14: error: '=>' expected but '}' found.
  }
  ^